--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,8 +3,11 @@ body {
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333;
 }
-.hide {
+.hidden {
   display: none;
+}
+paper-progress {
+  width: 100%;
 }
 paper-input .floated-label-placeholder {
   display: none !important;
